GNOME Bugzilla – Bug 687963
Extend warning "Icon '%s' not present in theme" to mention what seem is used
Last modified: 2014-11-03 05:25:53 UTC
Building GTK+ 3.4.2 myself for some reasons starting Evolution some icons are missing. (evolution:4387): e-table-WARNING **: Symbol »mail-unread« nicht im Thema vorhanden (evolution:4387): e-table-WARNING **: Symbol »mail-read« nicht im Thema vorhanden (evolution:4387): e-table-WARNING **: Symbol »mail-replied« nicht im Thema vorhanden (evolution:4387): e-table-WARNING **: Symbol »mail-forward« nicht im Thema vorhanden (evolution:4387): e-table-WARNING **: Symbol »mail-attachment« nicht im Thema vorhanden (evolution:4387): e-table-WARNING **: Symbol »emblem-important« nicht im Thema vorhanden (evolution:4387): e-table-WARNING **: Symbol »mail-attachment« nicht im Thema vorhanden (evolution:4387): e-table-WARNING **: Symbol »mail-attachment« nicht im Thema vorhanden (evolution:4387): e-table-WARNING **: Symbol »mail-unread« nicht im Thema vorhanden (evolution:4387): e-table-WARNING **: Symbol »emblem-important« nicht im Thema vorhanden (evolution:4387): e-table-WARNING **: Symbol »mail-attachment« nicht im Thema vorhanden The warning translates to »icon 'mail-unread' not present in theme«. po/de.po-msgid "Icon '%s' not present in theme" po/de.po:msgstr "Symbol »%s« nicht im Thema vorhanden" The icons should be there though. $ find /usr/share/icons -name mail-unread.png /usr/share/icons/HighContrast/24x24/status/mail-unread.png /usr/share/icons/HighContrast/22x22/status/mail-unread.png /usr/share/icons/HighContrast/16x16/status/mail-unread.png /usr/share/icons/HighContrast/256x256/status/mail-unread.png /usr/share/icons/HighContrast/32x32/status/mail-unread.png /usr/share/icons/HighContrast/48x48/status/mail-unread.png /usr/share/icons/oxygen/22x22/status/mail-unread.png /usr/share/icons/oxygen/16x16/status/mail-unread.png /usr/share/icons/oxygen/32x32/status/mail-unread.png /usr/share/icons/oxygen/48x48/status/mail-unread.png /usr/share/icons/gnome/24x24/status/mail-unread.png /usr/share/icons/gnome/22x22/status/mail-unread.png /usr/share/icons/gnome/16x16/status/mail-unread.png /usr/share/icons/gnome/32x32/status/mail-unread.png /usr/share/icons/gnome/48x48/status/mail-unread.png It would help the user tremendously if the warning contains the name of the theme being used. For example »icon 'mail-unread' not present in theme 'Adwaita'«.